--- a/bundle/Resources/views/limitation_values.html.twig
+++ b/bundle/Resources/views/limitation_values.html.twig
@@ -21,6 +21,14 @@
 {% endspaceless %}
 {% endblock %}
 
+{% block ez_limitation_newlanguage_value %}
+    {% spaceless %}
+        {% for value in values %}
+            {{ value.name }}{% if not loop.last %},{% else %}{% endif %}
+        {% endfor %}
+    {% endspaceless %}
+{% endblock %}
+
 {% block ez_limitation_node_value %}
 {% spaceless %}
     {% for path in values %}
